<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PointOfInterests</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
	<string name="poi_name">Name</string>
	<string name="poi_description">Description</string>
	<string name="poi_detail_title">Place Details</string>
	<string name="poi_id">ID</string>
	<string name="TexrViewAndroid">TexrViewAndroid</string>
	<string name="btn_start_b_label">btn_start_b_label</string>	
	<string name="send">send</string> 
	<string name="message">message</string>  
	<string name="subject">subject</string>
	<string name="to">to</string>
	
	<string name="POI_NativeDetailScreen">POI_NativeDetailScreen</string>
	<string name="POI_CaptureScreenBonus">POI_CaptureScreenBonus</string>
	<string name="ImageRecognitionAndGeo">ImageRecognitionAndGeo</string>
	<string name="SpeechToText">Escribe Texto Para leer</string>
</resources>
